--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "watch": "npm-run-all clean --parallel watch:*",
     "prepublish": "npm run --if-present build",
     "clean": "rimraf public/build && mkdirp public/build",
-    "server": "NODE_ENV=development webpack-dev-server -d --hot --content-base ./public --open",
     "build:js": "NODE_ENV=production webpack -p",
     "build:css": "postcss --config postcss.config.js",
     "watch:js": "NODE_ENV=development webpack -d --watch",
@@ -49,6 +48,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.11.6",
     "chokidar-cli": "^1.2.0",
+    "electron": "^1.3.3",
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
@@ -61,13 +61,13 @@
     "postcss-reporter": "^1.4.1",
     "power-assert": "^1.4.1",
     "rimraf": "^2.5.4",
-    "webpack": "^2.1.0-beta.20",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "webpack": "^2.1.0-beta.20"
   },
   "dependencies": {
     "almin": "^0.6.1",
     "almin-logger": "^1.3.2",
-    "electron-prebuilt": "^1.3.3",
+    "mousetrap": "^1.6.0",
+    "normalize.css": "^4.2.0",
     "pdfjs-dist": "^1.5.376",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
