--- a/package.json
+++ b/package.json
@@ -61,15 +61,20 @@
     "postcss-reporter": "^1.4.1",
     "power-assert": "^1.4.1",
     "rimraf": "^2.5.4",
+    "transform-loader": "^0.2.3",
     "webpack": "^2.1.0-beta.20"
   },
   "dependencies": {
     "almin": "^0.6.1",
     "almin-logger": "^1.3.2",
+    "electron-window-state": "^3.0.3",
+    "glob": "^7.0.5",
+    "map-like": "^1.0.1",
     "mousetrap": "^1.6.0",
     "normalize.css": "^4.2.0",
     "pdfjs-dist": "^1.5.376",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "react-dropzone": "^3.5.3"
   }
 }
