--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   },
   "files": [
     "src/",
-    "lib/"
+    "lib/",
+    "bin/"
   ],
   "version": "1.0.0",
   "description": "pdf viewer on electron",
   "main": "index.js",
   "bin": {
-    "mu-pdf-viewer": "bin/cmd.js"
+    "mu-pdf-viewer": "./bin/cmd.js"
   },
   "directories": {
     "test": "test"
@@ -51,7 +52,6 @@
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.11.6",
     "chokidar-cli": "^1.2.0",
-    "electron": "^1.3.3",
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
@@ -68,6 +68,7 @@
     "webpack": "^2.1.0-beta.20"
   },
   "dependencies": {
+    "electron": "^1.3.3",
     "almin": "^0.6.1",
     "almin-logger": "^1.3.2",
     "electron-window-state": "^3.0.3",
