--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-preset-power-assert": "^1.0.0",
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.11.6",
+    "brfs": "^1.4.3",
     "chokidar-cli": "^1.2.0",
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
