--- a/package.json
+++ b/package.json
@@ -23,13 +23,20 @@
   "bin": {
     "mu-pdf-viewer": "./bin/cmd.js"
   },
+  "build": {
+    "appId": "info.efcl.pdf-viewer",
+    "category": "util"
+  },
   "directories": {
     "test": "test"
   },
   "scripts": {
+    "electron:pack": "build --dir",
+    "electron:build": "build",
+    "electron:publish": "build --win --linux --mac --publish onTagOrDraft",
+    "electron": "electron index.js",
     "start": "npm-run-all clean --parallel watch:* electron",
     "test": "mocha test/",
-    "electron": "electron index.js",
     "build": "npm-run-all clean --parallel build:*",
     "watch": "npm-run-all clean --parallel watch:*",
     "prepublish": "npm run --if-present build",
@@ -54,6 +61,7 @@
     "babel-register": "^6.11.6",
     "brfs": "^1.4.3",
     "chokidar-cli": "^1.2.0",
+    "electron-builder": "^5.30.0",
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
@@ -67,10 +75,10 @@
     "power-assert": "^1.4.1",
     "rimraf": "^2.5.4",
     "transform-loader": "^0.2.3",
-    "webpack": "^2.1.0-beta.20"
+    "webpack": "^2.1.0-beta.20",
+    "electron": "^1.3.3"
   },
   "dependencies": {
-    "electron": "^1.3.3",
     "almin": "^0.6.1",
     "almin-logger": "^1.3.2",
     "electron-window-state": "^3.0.3",
