--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "dependencies": {
     "almin": "^0.6.1",
     "almin-logger": "^1.3.2",
+    "electron-gh-releases": "^2.0.4",
     "electron-window-state": "^3.0.3",
     "glob": "^7.0.5",
     "map-like": "^1.0.1",
