--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,34 @@
+osx_image: xcode7.3
 sudo: required
 dist: trusty
 language: node_js
-node_js: "stable"
+matrix:
+  include:
+    - os: osx
+
+addons:
+  apt:
+    packages:
+      - icnsutils
+      - graphicsmagick
+      - xz-utils
+      - rpm
+      - bsdtar
+
+cache:
+  directories:
+  - node_modules
+  - app/node_modules
+  - $HOME/.electron
+  - $HOME/.cache
+
+before_install:
+- "npm set config optional true"
+
+install:
+- nvm install stable
+- npm install
+script:
+- npm test
 after_success:
 - npm run electron:publish
