--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,16 @@
 osx_image: xcode7.3
+
 sudo: required
 dist: trusty
-language: node_js
+
+language: c
+
 matrix:
   include:
     - os: osx
-
-addons:
-  apt:
-    packages:
-      - icnsutils
-      - graphicsmagick
-      - xz-utils
-      - rpm
-      - bsdtar
+    - os: linux
+      env: CC=clang CXX=clang++ npm_config_clang=1
+      compiler: clang
 
 cache:
   directories:
@@ -22,13 +19,25 @@ cache:
   - $HOME/.electron
   - $HOME/.cache
 
+addons:
+  apt:
+    packages:
+      - libgnome-keyring-dev
+      - icnsutils
+
 before_install:
-- "npm set config optional true"
+  - mkdir -p /tmp/git-lfs && curl -L https://github.com/github/git-lfs/releases/download/v1.2.1/git-lfs-$([ "$TRAVIS_OS_NAME" == "linux" ] && echo "linux" || echo "darwin")-amd64-1.2.1.tar.gz | tar -xz -C /tmp/git-lfs --strip-components 1 && /tmp/git-lfs/git-lfs pull
 
 install:
-- nvm install stable
+- nvm install 6
+- npm install electron-builder@next # force install next version to test electron-builder
 - npm install
+- npm prune
+
 script:
 - npm test
-after_success:
-- npm run electron:publish
+- npm run release
+
+branches:
+  except:
+- "/^v\\d+\\.\\d+\\.\\d+$/"
