--- a/package.json
+++ b/package.json
@@ -31,16 +31,14 @@
     "test": "test"
   },
   "scripts": {
-    "electron:pack": "build --dir",
-    "electron:build": "build",
-    "release": "build --win --mac --publish onTagOrDraft",
+    "electron:build": "npm run build && electron-zip-packager . --platform=darwin --arch=x64 --prune --out=dist --app-version=${npm_package_version}",
     "electron": "electron index.js",
     "start": "npm-run-all clean --parallel watch:* electron",
     "test": "mocha test/",
     "build": "npm-run-all clean --parallel build:*",
     "watch": "npm-run-all clean --parallel watch:*",
     "prepublish": "npm run --if-present build",
-    "clean": "rimraf public/build && mkdirp public/build",
+    "clean": "rimraf public/build dist && mkdirp public/build dist",
     "build:js": "NODE_ENV=production webpack -p",
     "build:css": "postcss --config postcss.config.js",
     "watch:js": "NODE_ENV=development webpack -d --watch",
@@ -61,7 +59,7 @@
     "babel-register": "^6.11.6",
     "brfs": "^1.4.3",
     "chokidar-cli": "^1.2.0",
-    "electron-builder": "^5.30.0",
+    "electron-zip-packager": "^3.0.0",
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
@@ -75,10 +73,10 @@
     "power-assert": "^1.4.1",
     "rimraf": "^2.5.4",
     "transform-loader": "^0.2.3",
-    "webpack": "^2.1.0-beta.20",
-    "electron": "^1.3.3"
+    "webpack": "^2.1.0-beta.20"
   },
   "dependencies": {
+    "electron": "^1.3.3",
     "almin": "^0.6.1",
     "almin-logger": "^1.3.2",
     "electron-default-menu": "^1.0.0",
