--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "test": "test"
   },
   "scripts": {
-    "electron:build": "npm run build && electron-zip-packager . --platform=darwin --arch=x64 --prune --out=dist",
+    "electron:build:osx": "npm run build && electron-zip-packager . --platform=darwin --arch=x64 --prune --out=dist",
+    "electron:build:win": "npm run build && electron-zip-packager . --platform=win32 --arch=x64 --prune --out=dist",
+    "electron:build:linux": "npm run build && electron-zip-packager . --platform=linux --arch=x64 --prune --out=dist",
     "electron": "electron index.js",
     "start": "npm-run-all clean --parallel watch:* electron",
     "test": "mocha test/",
