--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
     "prepublish": "npm run --if-present build",
     "clean": "rimraf public/build dist && mkdirp public/build dist",
     "build:js": "NODE_ENV=production webpack -p",
-    "build:css": "postcss --config postcss.config.js",
-    "watch:js": "NODE_ENV=development webpack -d --watch",
-    "watch:css": "chokidar --initial 'src/**/*.css' -c 'postcss --config postcss.config.js'"
+    "watch:js": "NODE_ENV=development webpack -d --watch"
   },
   "keywords": [
     "pdf",
@@ -61,19 +59,15 @@
     "babel-register": "^6.11.6",
     "brfs": "^1.4.3",
     "chokidar-cli": "^1.2.0",
+    "css-loader": "^2.1.1",
     "electron-zip-packager": "^4.0.0",
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
     "npm-run-all": "^3.1.1",
-    "postcss-calc": "^5.3.0",
-    "postcss-cli": "^2.5.2",
-    "postcss-custom-media": "^5.0.1",
-    "postcss-custom-properties": "^5.0.1",
-    "postcss-easy-import": "^1.0.1",
-    "postcss-reporter": "^1.4.1",
     "power-assert": "^1.4.1",
     "rimraf": "^2.5.4",
+    "style-loader": "^0.23.1",
     "transform-loader": "^0.2.3",
     "webpack": "^2.1.0-beta.20"
   },
@@ -89,7 +83,7 @@
     "minimist": "^1.2.0",
     "mousetrap": "^1.6.0",
     "normalize.css": "^5.0.0",
-    "pdfjs-dist": "^1.5.376",
+    "pdfjs-dist": "1.5.376",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
   }
