--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,14 @@
 {
   "presets": [
-    "es2015",
-    "react"
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "electron": "5"
+        }
+      }
+    ],
+    "@babel/preset-react"
   ],
   "env": {
     "development": {
