--- a/package.json
+++ b/package.json
@@ -24,16 +24,23 @@
     "mu-pdf-viewer": "./bin/cmd.js"
   },
   "build": {
-    "appId": "info.efcl.pdf-viewer",
-    "category": "util"
-  },
-  "directories": {
-    "test": "test"
+    "productName": "mu-pdf-viewer",
+    "appId": "info.efcl.mu-pdf-viewer",
+    "asar": true,
+    "npmRebuild": false,
+    "files": [
+      "index.js",
+      "public/**/*",
+      "bin/**/*",
+      "node_modules/**/*"
+    ],
+    "publish": [
+      {
+        "provider": "github"
+      }
+    ]
   },
   "scripts": {
-    "electron:build:osx": "npm run build && electron-zip-packager . --platform=darwin --arch=x64 --prune --out=dist",
-    "electron:build:win": "npm run build && electron-zip-packager . --platform=win32 --arch=x64 --prune --out=dist",
-    "electron:build:linux": "npm run build && electron-zip-packager . --platform=linux --arch=x64 --prune --out=dist",
     "electron": "electron index.js",
     "start": "npm-run-all clean --parallel watch:* electron",
     "test": "mocha test/",
@@ -41,40 +48,44 @@
     "watch": "npm-run-all clean --parallel watch:*",
     "prepublish": "npm run --if-present build",
     "clean": "rimraf public/build dist && mkdirp public/build dist",
-    "build:js": "NODE_ENV=production webpack -p",
-    "watch:js": "NODE_ENV=development webpack -d --watch"
+    "build:js": "webpack --mode production",
+    "watch:js": "webpack --mode development --watch",
+    "pack": "electron-builder --dir",
+    "predist": "npm run build",
+    "dist": "electron-builder"
   },
   "keywords": [
     "pdf",
     "electron"
   ],
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-cli": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-jsdoc-to-assert": "^4.0.0",
-    "babel-preset-power-assert": "^1.0.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.11.6",
-    "brfs": "^1.4.3",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.6",
+    "babel-preset-jsdoc-to-assert": "^5.0.0",
+    "babel-preset-power-assert": "^3.0.0",
+    "brfs": "^2.0.2",
     "chokidar-cli": "^1.2.0",
     "css-loader": "^2.1.1",
-    "electron-zip-packager": "^4.0.0",
-    "json-loader": "^0.5.4",
+    "electron": "^5.0.1",
+    "electron-builder": "^20.40.2",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.0.2",
-    "npm-run-all": "^3.1.1",
+    "mocha": "^6.1.4",
+    "npm-run-all": "^4.1.5",
     "power-assert": "^1.4.1",
     "rimraf": "^2.5.4",
     "style-loader": "^0.23.1",
     "transform-loader": "^0.2.3",
-    "webpack": "^2.1.0-beta.20"
+    "webpack": "^4.32.1",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
     "almin": "^0.9.1",
     "almin-logger": "^3.0.0",
-    "electron": "^5.0.1",
     "electron-default-menu": "^1.0.0",
     "electron-gh-releases": "^2.0.4",
     "electron-window-state": "^5.0.3",
